# wotpp

./: .editorconfig  Makefile  README.md  meson.build  meson_options.txt  test.wpp  todo
.github/: FUNDING.yml
.github/workflows/: test.yml
docs/: cool-stuff.txt  example.wpp  grammar.ebnf  install.md  introduction.md  reference.md  strings.txt
docs/history/: README.md  example.wpp  forth  grammar.ebnf  grammar.txt  original.wpp
docs/old/: grammar.xhtml  old-example.wpp  vm
examples/: callback.wpp  cmp.wpp  curry.wpp  eval  fancy_html.wpp  forth.wpp  generator.wpp  html.wpp  join.wpp  list.wpp  list_pairs.wpp  markdown.wpp  notes.wpp  numbers.wpp  pairs.wpp  rainbow.wpp  run  shell  triples.wpp  vcat.wpp
highlighters/: ebnf.kak  test.wpp  wotpp.kak
highlighters/vim/ftdetect/: wotpp.vim
highlighters/vim/syntax/: wotpp.vim
modules/: tinge.hpp
src/: exception.hpp  genprog.hpp  lexer.hpp  main.cpp  parser.hpp  repl.hpp
src/backend/eval/: eval.cpp  eval.hpp  intrinsics.cpp  intrinsics.hpp
src/backend/reconstruct/: reconstruct.hpp
src/backend/sexpr/: sexpr.hpp
src/frontend/: ast.hpp  char.hpp  position.hpp  token.hpp  view.hpp
src/frontend/lexer/: lexer.cpp  lexer.hpp
src/frontend/parser/: ast_nodes.hpp  parser.cpp  parser.hpp
src/misc/: argp.hpp  colours.hpp  constants.hpp  dbg.hpp  flags.hpp  fwddecl.hpp  overflow_detect.cpp  overflow_detect.hpp  repl.hpp  report.hpp  utf8.hpp  warnings.hpp
src/misc/util/: util.cpp  util.hpp
src/structures/: ast.hpp  context.hpp  environment.hpp  error.hpp  exception.hpp  position.hpp  rng.hpp  token.hpp  view.hpp  warnings.hpp
src/utils/: argp.hpp  char.hpp  util.hpp
src/visitors/: eval.hpp  reconstruct.hpp  sexpr.hpp
stdlib/: stdlib.wpp
tests/: README.md  assert.wpp  assert_fail.wpp  backtick.wpp  blocks.wpp  cat.wpp  code.wpp  codeify.wpp  comments.wpp  conflict_keyword.wpp  dir_fail.wpp  drop.wpp  drop_fail.wpp  error.wpp  error_no_func.wpp  escape.wpp  eval.wpp  file.wpp  file_fail.wpp  find.wpp  func.wpp  generational_func.wpp  length.wpp  literals.wpp  map.wpp  match.wpp  md.wpp  meta.wpp  nested_func.wpp  paragraph.wpp  pipe.wpp  prefix.wpp  raw.wpp  recursion_warn.wpp  recursion_warn_fail.wpp  run.wpp  run_fail.wpp  run_test.py  shadow_warn.wpp  slice.wpp  (+13 more)
tests/data/: source1  source2  source4
tests/data/sources/: source3
