option('profile',                    type: 'boolean', value: false, description: 'enable profiling instrumentation')
option('native',                     type: 'boolean', value: false, description: 'use host specific optimisations')
option('sanitizers',                 type: 'boolean', value: false, description: 'enable sanitizers')
option('disable_repl',               type: 'boolean', value: false, description: 'disable the repl')
option('disable_run',                type: 'boolean', value: false, description: 'disable the run and pipe intrinsics')
option('disable_colour',             type: 'boolean', value: false, description: 'disable ANSI colour sequences')
option('disable_file',               type: 'boolean', value: false, description: 'disable the file and use instrinsics')
option('enable_overflow_detector',   type: 'boolean', value: false, description: 'enable the stack overflow detector')
